--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
 <app-header></app-header>
-<p>Add content here...</p>
+<div class="box">
+  <app-crew></app-crew>
+  <app-equipment></app-equipment>
+  <app-experiments></app-experiments>
+</div>
